// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VisualSnapshots generateAndSendPdfFileSnapshots with params and build-id difffing finished 1`] = `
[
  [
    "Build custom-build-id finished.",
  ],
  [
    "Build custom-build-id finished (status=APPROVED, unapprovedCount=0, errorCount=0).",
  ],
]
`;

exports[`VisualSnapshots generateAndSendPdfFileSnapshots with params and build-id difffing unfinished 1`] = `
[
  [
    "Build custom-build-id finished.",
  ],
  [
    "Build custom-build-id finished but snapshots haven't been compared yet. Check the build status in a few moments.",
  ],
]
`;

exports[`VisualSnapshots generateAndSendPdfFileSnapshots with params difffing finished 1`] = `
[
  [
    "Build build-id created: http://build-url/build-id",
  ],
  [
    "Build build-id finished.",
  ],
  [
    "Build build-id finished (status=APPROVED, unapprovedCount=0, errorCount=0).",
  ],
]
`;

exports[`VisualSnapshots generateAndSendPdfFileSnapshots with params difffing unfinished 1`] = `
[
  [
    "Build build-id created: http://build-url/build-id",
  ],
  [
    "Build build-id finished.",
  ],
  [
    "Build build-id finished but snapshots haven't been compared yet. Check the build status in a few moments.",
  ],
]
`;

exports[`VisualSnapshots generateAndSendPdfFileSnapshots without params 1`] = `
[
  [
    "Build build-id created: http://build-url/build-id",
  ],
  [
    "Build build-id finished.",
  ],
  [
    "Build build-id finished (status=UNAPPROVED, unapprovedCount=2, errorCount=0).",
  ],
]
`;
